[project]
name = "evergreen-multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["backend", "pipeline"]

[tool.uv.sources]
backend = { workspace = true }
pipeline = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
