[project]
name = "evergreen_agents"
version = "0.1.0"
description = "Evergreen Agents"
requires-python = ">=3.13"
dependencies = ["google-adk>=1.15.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.agent-starter-pack.settings]
agent_directory = "evergreen_agents"
